# clenow-momentum-strategy

./: .env.example  .gitignore  GETTING_STARTED.md  main.py  pyproject.toml  pytest.ini  strategy.py  test_portfolio.json
docs/: phase1_summary.md
docs/adr/: 0001-universe-registry-dispatch.md  adr_template.md
docs/rfcs/: 0001-switchable-market-universe.md  0002-portfolio-sizing-backfill-and-risk-labels.md  0003-universe-constituent-metadata.md  rfc_template.md
scripts/: __init__.py  ibkr_trading.py  init_portfolio.py  manage_cache.py  rebuild.py  run_analysis.py  test_backtest_data.py  test_cache.py  warm_cache.py
src/clenow_momentum/: __init__.py
src/clenow_momentum/data/: __init__.py  cache.py  caching.py  fetcher.py  (+3 more)
tests/: __init__.py  test_ibkr_client_unit.py
tests/integration/: README.md  __init__.py  test_ibkr_client_integration.py  test_sp500_wikipedia_integration.py
tests/test_data/: test_cache_keying.py  test_fetcher.py  test_universes.py  test_wikipedia_parser.py  test_yfinance_source.py
tests/test_data_sources/: __init__.py  test_yfinance_adapter.py
tests/test_indicators/: __init__.py  test_filters.py  test_momentum.py  test_risk.py
tests/test_market_analysis/: test_regime_benchmark.py
tests/test_scripts/: test_run_analysis_display.py
tests/test_strategy/: __init__.py  test_market_regime.py  test_rebalancing.py  test_trading_schedule.py
tests/test_trading/: __init__.py  test_ibkr_connector.py  test_integration.py  test_risk_controls.py  test_trading_manager.py
tests/trading/: test_order_generation.py  test_order_system_direct.py
(+47 files in other folders)
